fix(sidebar): handle change background for scrollbar follow theme

--- a/containers/Layout/DefaultLayout/DefaultLayout.module.scss
+++ b/containers/Layout/DefaultLayout/DefaultLayout.module.scss
@@ -21,7 +21,14 @@
     box-shadow: 0px 2px 8px rgb(0 0 0 / 6%);
 
     overflow-y: auto;
-    overflow-x: hidden;
+
+    &::-webkit-scrollbar-thumb {
+      background-color: transparent;
+    }
+
+    &:hover::-webkit-scrollbar-thumb {
+      background-color: var(--colorBGInput2);
+    }
 
     @include responsive('desktop') {
       width: $sidebar-desktop-width;
